#+TITLE: AUCTeX NEWS -- History of notable and user-visible changes
#+AUTHOR: AUCTeX Maintenance Team
#+LANGUAGE: en
#+OPTIONS: num:nil toc:nil
#+LINK: ELPA https://elpa.gnu.org/packages/%s
# Copyright (C) 2024-2026 Free Software Foundation, Inc.
# License: GNU General Public License 3
# The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]]

* [Unreleased]

** Changed

- Support new language names provided by babel-german v2.99.

* [14.1.2] - 2026-01-14

** Fixed

- Recognize and ignore non-error messages emitted by LuaTeX which are
  different from what pdfTeX does.

* [14.1.1] - 2026-01-12

** Added

- Add new command ~LaTeX-repeat-recent-math~ which looks backward for a
  recent top-level display math construct and inserts a copy to the
  current line.

- Add new support files =style/floatflt.el=, =style/fontawesome7.el= and
  =style/ltx-talk.el=.

- Add new function ~preview-dvisvgm-command~ to generate SVG images in
  preview.

** Changed

- Change the format of the value stored in ~preview-dumped-alist~.  Add
  a new optional argument to the function ~preview-watch-preamble~.

- Respect the value of ~font-latex-fontify-sectioning~ when fontifying
  macros as =slide-title=.  This affects macros provided by
  =style/beamer.el= and =style/ltx-talk.el=.

- Change the name of ~preview-dvipng-command~ to ~preview-dvi*-command~.
  Also make it accept a function symbol returning the full command.

- Change the name of ~preview-dvipng-image-type~ to
  ~preview-dvi*-image-type~.

- Change the setting of ~preview-image-creators~ and
  ~preview-gs-image-type-alist~ to use ~dvi*~ instead of ~dvipng~.

** Fixed

- Ignore the (non-error) "ignored error" messages emitted by the
  typesetting engine and don't abort the re-compilation when necessary.
  It fixes this [[https://github.com/latex3/latex2e/issues/1907][LaTeX report]].

* [14.1.0] - 2025-07-11

** Added

- Add new commands ~LaTeX-make-inline~ which converts the display math